@@ -9,7 +9,6 @@
  * add downloaded feeds tab
 
 
-
   == 0.6 / non-release-cricital ==
 
  * maybe mark "currently downloading" episodes
