@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Mon Jan  9 22:39:58 2006
+# Generated on Sat Feb  4 10:19:23 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -126,8 +126,6 @@ class Gpodder(SimpleGladeApp):
         #self.channels.append( reader.channel)
         reader = gPodderChannelReader()
         self.channels = reader.read( False)
-        for ch in self.channels:
-            print gPodderLib().getChannelIndexFile( ch)
         self.channels_loaded = True
         
         # update view
@@ -392,7 +390,7 @@ class Gpodder(SimpleGladeApp):
         filename = gPodderLib().getPodcastFilename( current_channel, current_podcast.url)
         
         if os.path.exists( filename) == False and self.download_status_manager.is_download_in_progress( current_podcast.url) == False:
-            downloadThread( current_podcast.url, filename, None, self.download_status_manager, current_podcast.title).download()
+            downloadThread( current_podcast.url, filename, None, self.download_status_manager, current_podcast.title, current_channel, current_podcast).download()
         else:
             message_dialog = gtk.MessageDialog( self.gPodder, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, gtk.BUTTONS_OK)
             message_dialog.set_markup( "<big><b>Already downloaded</b></big>\n\nYou have already downloaded this episode.\nOr you are currently downloading it.")
