@@ -1,3 +1,9 @@
+Sat, 04 Feb 2006 11:36:08 +0100 <thp@perli.net>
+	* Fixed localdb read/write support
+
+Tue, 10 Jan 2006 01:19:44 +0100 <thp@perli.net>
+	+ Added first cut of localdb support (liblocdbwriter + liblocdbreader)
+
 Mon, 09 Jan 2006 00:13:10 +0100 <thp@perli.net>
 	+ Added gPodder Properties dialog with http/ftp proxy settings
 	+ Added very basic config file support to gPodderLib, for proxy
